# vbf_event_classifier

./: .gitignore  README.md  benchmark_config.json  benchmark_config_all.json  plot_comparison.py  pyproject.toml
ml_framework/: main.py
ml_framework/core/: base_dataloader.py  base_method.py  data_processor.py  data_utils.py  feature_plots.py  metrics.py  model_manager.py  plotting.py  registry.py  runner.py
ml_framework/dataloaders/: simple_loader.py  standard_loader.py
ml_framework/generators/: __init__.py  base_generator.py
ml_framework/generators/vae/: model.py
ml_framework/methods/: pytorch_base.py
ml_framework/methods/bagging_classifier/: __init__.py  config.json  model.py
ml_framework/methods/dummy_classifier/: __init__.py  config.json  model.py
ml_framework/methods/gaussian_nb/: __init__.py  config.json  model.py
ml_framework/methods/gradient_boosting/: __init__.py  config.json  model.py
ml_framework/methods/hist_gradient_boosting/: __init__.py  config.json  model.py
ml_framework/methods/kmeans_5/: __init__.py  config.json  model.py
ml_framework/methods/lda/: __init__.py  config.json  model.py
ml_framework/methods/logistic_regression/: __init__.py  config.json  model.py
ml_framework/methods/mlp_bottleneck_classifier/: __init__.py  model.py
ml_framework/methods/mlp_classifier/: __init__.py  config.json  model.py
ml_framework/methods/nca_knn/: __init__.py  (+2 more)
scripts/: analyze_dataset.py  ensemble_results.py  hyperparameter_search.py  make_train_val_split_balanced.py  plot_summary.py  run_experiment.py  run_generation.py  split_data.py
(+22 files in other folders)
