[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbf-event-classifier"
version = "0.1.0"
description = "Modular framework for benchmarking ML classifiers across datasets and preprocessing strategies."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "imbalanced-learn",
  "matplotlib",
  "seaborn",
  "tqdm",
  "joblib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["ml_framework*"]

[tool.setuptools.package-data]
# Keep model default configs available when installed (editable or wheel).
ml_framework = ["methods/**/config.json"]
